--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ p {
 
 
 <!image>
-<img src= "../Downloads/c3-1611301643.jpg" alt="mirrorchristmas" width="600">
+<img src= ".https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/c3-1611301643.jpg?crop=0.502xw:1.00xh;0.0604xw,0&resize=640:*" alt="mirrorchristmas" width="600">
 
 <!list>
 
